package isep.switchdev;

import isep.switchdev.Enum.Genre;

import java.time.LocalDate;
import java.util.Locale;

public class BibliographicalData {

    // Attributes
    private Title title1;
    private Profile[] authors;
    private Locale language;              // substitui Language (que seria um enum) por Locale
    private Publisher publisher;
    private LocalDate publishDate;
    private Genre[] genre;
    private int numberOfPages;
    private String chunksOfText;

    // Constructor
    public BibliographicalData(Title title1, Profile[] authors, Locale language, Publisher publisher, LocalDate publishDate,
                               Genre[] genre, int numberOfPages, String chunksOfText) {
        this.title1 = title1;
        this.authors = authors;
        this.language = language;
        this.publisher = publisher;
        this.publishDate = publishDate;
        this.genre = genre;
        this.numberOfPages = numberOfPages;
        this.chunksOfText = chunksOfText;
    }

    // Getters
    public Title getTitle1() {
        return title1;
    }

    public Profile[] getAuthors() {
        return authors;
    }

    public Locale getLanguage() {
        return language;
    }

    public Publisher getPublisher() {
        return publisher;
    }

    public LocalDate getPublishDate() {                         // substitui Language (que seria um enum) por Locale
        return publishDate;
    }

    public Genre[] getGenre() {
        return genre;
    }

    public int getNumberOfPages() {
        return numberOfPages;
    }

    public String getChunksOfText() {
        return chunksOfText;
    }
}
