package isep.switchdev.Enum;

public enum Country {
    PORTUGAL,
    SPAIN,
    FRANCE,
    GERMANY
}

//We might have to change this (Portugal vs PORTUGAL or if we are doing this through Enum at all)
